# mc_unitree2

./: CMakeLists.txt  README.md
etc/: mc_rtc.yaml  mc_rtc_go2.yaml
src/: CMakeLists.txt  Go2Control.cpp  Go2Control.h  H1Control.cpp  H1Control.h  MCControlUnitree2.cpp  MCControlUnitree2.h  RobotControl.cpp  RobotControl.h  main.cpp  main_go2.cpp  main_h1.cpp  rtapi.h
